--- a/templates/views/internships2.hbs
+++ b/templates/views/internships2.hbs
@@ -24,7 +24,7 @@
 
         <div class="job-search">
             <form class="form-control" action="/internships" method="POST">
-                <input type="text" name="internshipKeyword" id="internshipKeyword" placeholder="Looking for? ">
+                <input type="text" class="custom-input" name="internshipKeyword" id="internshipKeyword" placeholder="Looking for? ">
                 <button class="btn" type="submit"> Search Internships </button>
                 <button class="btn" onfocus="this.value='' "> Clear </button>
             </form>
