--- a/templates/views/userProfile.hbs
+++ b/templates/views/userProfile.hbs
@@ -104,8 +104,8 @@
 
     <div class="grey-background">
 
-    <form action="/myprofile" method="POST" role="form" enctype="multipart/form-data">
-        <input type="file" name="updateImage"> Upload Profile Picture
+    <form action="/myprofile" method="POST" class="pfp-control" role="form" enctype="multipart/form-data">
+        <input type="file" name="updateImage"><p>Upload Profile Picture</p> 
         <button class="btn" type="submit"> Save Changes </button>
     </form>
 
