Scholarship UI Changed, Acc creation page added, Scrollbar added, Toggle companies filter functional, User Profile refined

--- a/templates/views/contactus.hbs
+++ b/templates/views/contactus.hbs
@@ -17,11 +17,11 @@
 
     <center>
 
-        <input type="text" name="username" id="name" placeholder="Name*" required><br><br>
-        <input type="email" name="email" id="email" placeholder="Email Address*" required><br><br>
-        <input type="text" name="subject" id="subject" placeholder="Subject*" required><br><br>
-        <textarea rows="13" cols="53" name="message" id="message"></textarea><br><br>
-        <button class="btn" type="submit"> Send </button>
+        <input type="text" class="cinput" name="username" id="name" placeholder="Name*" required><br><br>
+        <input type="email"class="cinput" name="email" id="email" placeholder="Email Address*" required><br><br>
+        <input type="text" class="cinput" name="subject" id="subject" placeholder="Subject*" required><br><br>
+        <textarea rows="13"class="cinput" cols="53" name="message" id="message"></textarea><br><br>
+        <button class="btn"class="cinput" type="submit"> Send </button>
         <button class="btn"> Clear </button>
 
     </center>
