--- a/public/css/index2.css
+++ b/public/css/index2.css
@@ -85,11 +85,17 @@ button a {
 input {
     background-color: white;
     border-radius: 12px;
-    /* border-bottom: 3px solid var(--clr-primary); */
     border: 0px transparent;
     color: black;
     margin: 8px;
     padding: 0.5rem;
+}
+
+.cinput{
+    
+    border-bottom: 3px solid var(--clr-primary);
+    border-radius: 0px !important;
+    background-color: #ededed;
 }
 
 
@@ -227,6 +233,10 @@ header a:hover {
 #dropdown {
     list-style-type: none;
 }
+
+/* .r-mob{
+    display: none;
+} */
 
 
 
