--- a/templates/views/login2.hbs
+++ b/templates/views/login2.hbs
@@ -15,35 +15,36 @@
 
 
         <div class="inner-container">
-        <div class="sec-left">
+            <div class="sec-left">
 
-            <img src="/img/login.png" height="100%" width="100%" alt="Login">
+                <img src="/img/login.png" height="100%" width="100%" alt="Login">
 
-        </div>
+            </div>
 
-        <div class="sec-right">
-            <center>
+            <div class="sec-right">
+                <center>
 
-                 {{message}}
-                  <p id="isLoginError"> {{loginErrorIfAny}} </p><br>
-        {{errorMsg}}
-           {{logoutMessage}}
-            <form method="POST" action="/login">
+                    {{message}}
+                    <p id="isLoginError"> {{loginErrorIfAny}} </p><br>
+                    {{errorMsg}}
+                    {{logoutMessage}}
+                    <form method="POST" action="/login">
 
-                <label> Email Id </label><br>
-                <input type="text" placeholder="Enter your email Id" id="email" name="email"><br>
+                        <label> Email Id </label><br>
+                        <input type="text" placeholder="Enter your email Id" id="email" name="email"><br>
 
-                <label> Password </label><br>
-                <input type="password" placeholder="Enter your password" id="password" name="password"><br><br>
-                <label for="rememberme"> Remember Me <input type="checkbox" value="remember-me"></label><br>
-                <a href="/forgotpassword" style="text-decoration: none"> Forgot Password? Click Here!</a><br><br>
+                        <label> Password </label><br>
+                        <input type="password" placeholder="Enter your password" id="password" name="password"><br><br>
+                        <label for="rememberme"> Remember Me <input type="checkbox" value="remember-me"></label><br>
+                        <a href="/forgotpassword" style="text-decoration: none"> Forgot Password? Click
+                            Here!</a><br><br>
 
-                <button class="btn g-recaptcha" id="login" type="submit"> Login </button><br>
+                        <button class="btn g-recaptcha" id="login" type="submit"> Login </button><br>
 
-            </form>
+                    </form>
 
-</center>
-        </div>
+                </center>
+            </div>
         </div>
     </div>
 
